--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Curso Digital Huechuraba</title>
+  <title>Escuela Digital Huechuraba - Universidad Mayor</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -68,7 +68,7 @@
     </div>
 
     <div id="paso0" class="oculto">
-      <h2>Bienvenido/a al curso digital para personas mayores de Huechuraba</h2>
+      <h2>Repasemos...</h2>
       <p>Vamos a practicar el uso del teclado y el mouse. No te preocupes por equivocarte, ¡lo importante es intentarlo! 😊</p>
       <button onclick="mostrarPaso(1)">Comenzar</button>
     </div>
